<resources>
    <string name="app_name">basal_o_mat</string>
    <string name="title_start">Start</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_test">Test</string>
    <string name="title_protocol">Protokoll</string>
    <string name="title_profile">Profil</string>
    <string name="title_more">Mehr</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bsrtF_first">Möchten Sie den Basalraten Test jetzt starten oder einen Zeitpunkt für den Test planen?</string>
    <string name="bsrtF_btn_js">start test</string>
    <string name="bsrtF_btn_scdl">Zeitpunkt festlegen</string>
    <string name="lorem_short" translatable="false">Lorem ipsum dolor sit amet</string>
    <string name="lorem_middle" translatable="false">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="lorem_long" translatable="false">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="default_string" translatable="false">default</string>
    <string name="fAddBr_time_low">0%1$d:00 &#8211; 0%2$d:00</string>
    <string name="fAddBr_time_nine">0%1$d:00 &#8211; %2$d:00</string>
    <string name="fAddBr_time_high">%1$d:00 &#8211; %2$d:00</string>
    <string name="number_to_string" translatable="false">%1$.2f</string>
    <string name="btn_plusOne">+1</string>
    <string name="btn_minusOne">-1</string>
    <string name="btn_minusPointOne">-0.10</string>
    <string name="btn_minusPointZeroOne">-0.01</string>
    <string name="btn_plusPointZeroOne">+0.01</string>
    <string name="btn_plusPointOne">+0.10</string>
    <string name="input_basalunit_to_low">Inputted basal unit can\'t be lower than 0.00</string>
    <string name="input_basalunit_to_high">Inputted basal unit can\'t be higher than 4.00</string>
    <string name="btn_save">save</string>
    <string name="delete">delete</string>
    <string name="profile_delete_question">Delete %1$s?</string>
    <string name="are_u_sure">Do you want to delete the Profile?</string>
    <string name="cancel">Cancel</string>
    <string name="countDown" translatable="false">%1$02d:%2$02d</string>
    <string name="profileName">Profilename</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">finish</string>
    <string name="units">Units:</string>
    <string name="bloodsugar_input_message">Bloodsugar in mg/dl</string>
    <string name="btn_continue">continue</string>
    <string name="enter_bloodsugar">Please enter your measured Bloodsugar (mg/dl)</string>
    <string name="error_profilename">Please insert profilename</string>
    <string name="error_bloodsugar">Please insert bloodsugar in mg/dl</string>
    <string name="label_basalrate_test">Basalrate Test</string>
    <string name="label_start">Start</string>
    <string name="label_protocol">Protocols</string>
    <string name="label_basalrate_profile">Basalrate Profiles</string>
    <string name="label_more">More</string>
    <string name="label_bloodsugar_input">Enter Bloodsugar</string>
    <string name="label_result">Result</string>
    <string name="label_add_basalrate">Add Basalrate Profile</string>
    <string name="label_update_basalrate">Update Basalrate</string>
    <string name="TERMINATION">termination</string>
    <string name="bs_high">Bloodsugar too high</string>
    <string name="bs_low">Bloodsugar too low</string>
    <string name="bs_high_message">Please intake carbohydrates. Test will be terminated</string>
    <string name="bs_low_message">Please treat yourself with Insulin. Test will be terminated</string>
    <string name="ok" translatable="false">OK</string>
    <string name="exit">Exit</string>
    <string name="fTR_label_tv">Testresult to profile %1$s from %2$s</string>
    <string name="fTR_advice_label">Recommanded adjustment:</string>
    <string name="fTR_recyclerView_clock">%1$02d:00 O\'Clock</string>
    <string name="measurement_text" translatable="false">%1$03d mg/dl</string>
    <string name="adjustment_text">Adjust basal unit at %1$02d:00 o\'clock with value %2$f to %3$f.\n</string>
    <string name="choose_profile_title">Choose Profile</string>
    <string name="profile_updated">updated  Basalrate profile  %1$s</string>
    <string name="result_please_note">Please note: \nRepeat the test at least once again in the near future.</string>
    <string name="btn_delete_testresult">delete testresult</string>
    <string name="result_delete_question">Delete Result?</string>
    <string name="result_are_u_sure">Do you want to delete the result?</string>
    <string name="basal_profile_instruction">Please insert a profile name and input basal unit</string>
</resources>
