<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_start"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_start"/>

    <item
            android:id="@+id/navigation_test"
            android:icon="@drawable/ic_access_alarm_black_24dp"
            android:title="@string/title_test"/>

    <item
            android:id="@+id/navigation_protocol"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/title_protocol"/>

    <item
            android:id="@+id/navigation_profil"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/title_profile"/>

    <item
            android:id="@+id/navigation_more"
            android:icon="@drawable/ic_more_horiz_black_24dp"
            android:title="@string/title_more"/>


</menu>
