<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="15dp"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rVI_consLay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <ImageView
                android:id="@+id/rVI_normal_iView"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/default_string"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                />

        <TextView
                android:id="@+id/rVI_normal_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lorem_short"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rVI_normal_iView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/rVI_normal_subtitle"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                />

        <TextView
                android:id="@+id/rVI_normal_subtitle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:ellipsize="end"
                android:maxLines="4"
                android:text="@string/lorem_middle"
                app:layout_constraintTop_toBottomOf="@+id/rVI_normal_title"
                app:layout_constraintStart_toEndOf="@+id/rVI_normal_iView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="8dp"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>